UI enhancement for PWA compatibility

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Burmese Font Tester",
+  "name": "Burmese Fonts Tester",
   "short_name": "Burmese Fonts",
   "background_color": "#ffffff",
   "display": "standalone",
