--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
+        "@vercel/analytics": "^1.3.1",
         "autoprefixer": "10.4.16",
         "eslint": "8.54.0",
         "eslint-config-next": "14.0.3",
